[package]
name = "bmoji"
version = "0.2.1"
authors = ["Hailey Somerville <hailey@hailey.lol>"]
edition = "2021"
description = "bemenu powered emoji picker"
repository = "https://github.com/haileys/bmoji"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
emojis = "0.3"
